# llm.cpp

./: CMakeLists.txt  README.md
llmc/: CMakeLists.txt
llmcpp/: CMakeLists.txt  README.md  nn.hpp  nn_test.cu  tensor_types.hpp  test_eigen_cpu.cpp  train_gpt2.cpp  train_gpt2.cu
